2009-07-24  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 0.4 release.
	* gnomescreensaver.py (GsThemeWindow): Code refactoring.
	* photoimage.py: Fixed a bug.

2009-07-08  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoimage.py, menu.py, photoframe.py: Divided photoframe.py.

2009-07-07  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoframe.py, gnomescreensaver.py, etc: Added support for
	  gnome-screensaver (issue #21).
	* extras/build_i18n.py: Added distutils.extras hacks.
	* fspot.py: Fixed bugs of ratings.

2009-07-01  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoframe.py, photoliststore.py: Update Popup menu when an
	  opend image file is deleted (issue #16).
	* inotify.py, folder.py, base.py, photoliststore.py: Added support
	  for inotify in the Folder plugin.  Update recents queue with inotify.

2009-06-30  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* ja.po: Updated translation.
	* fspot.py: Added a rate weight option.  Added advanced options.
	* base.py, gphotoframe.glade: Adjust UI.
	* base.py, folder.py, gphotoframe.glade: Added subfolders settings
	  for Folder plguin.
	* photoliststore.py: Regard False as data in gconf.
	* config.py: Added bool type in get_value and set_value.

2009-06-29  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* base.py, fspot.py, preferences.py, gphotoframe.glade: Added rate
	  settings for F-Spot plguin.

2009-06-24  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoliststore.py, preferences.py, base.py, fspot.py:
	  Started implementation for advanced plugin options.

2009-06-23  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* flickr.py: Added support for getting original phtos.
	* photoframe.py, photoliststore.py, gphotoframe.glade:
	  Added support for Recent Photos (issue #14).

2009-06-22  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoframe.py: Added a key board accelerator for full screen mode.
	  Hide the mouse cursor in full screen mode.

2009-06-21  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
