@@ -1,3 +1,7 @@
+2009-07-29  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* fspot.py: Fixed a tag related bug. (issue #25)
+
 2009-07-24  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* NEWS: 0.4 release.
